Set up NextAuth

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:new_password@localhost:3306/issue_tracker"
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="8/8C8UteR0o6Uj6jbNqo8aYpiHBpfgRb8FAZNC4J0GI="
