configure google provider

--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@
 DATABASE_URL="mysql://root:new_password@localhost:3306/issue_tracker"
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="8/8C8UteR0o6Uj6jbNqo8aYpiHBpfgRb8FAZNC4J0GI="
+GOOGLE_CLIENT_ID="1037952838077-79bl700oq7tnum1v592q7urunr46u4q6.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
